feat: add live takeover channels templates and MOS
